<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_fence_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/fence_setting_title"
            android:textColor="@color/dialog_title"
            android:textSize="20dp" />

        <View style="@style/dialog_split_line_style" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/layout_divider_shape"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/fence_type"
                    android:textColor="@color/dialog_title"
                    android:textSize="18dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/btn_local"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:button="@drawable/radio_selector"
                        android:checked="true"
                        android:minHeight="25dp"
                        android:text="@string/local_fence"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/btn_server"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:button="@drawable/radio_selector"
                        android:minHeight="25dp"
                        android:text="@string/server_fence"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/all_fence_operate"
                    android:textColor="@color/dialog_title"
                    android:textSize="18dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/btn_create_fence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:button="@drawable/radio_selector"
                        android:minHeight="25dp"
                        android:text="@string/create_fence"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/btn_fence_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:button="@drawable/radio_selector"
                        android:checked="true"
                        android:minHeight="25dp"
                        android:text="@string/fence_list"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tv_create_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/fence_create_caption"
                    android:textColor="@color/red"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_fence_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/fence_shape"
                    android:textColor="@color/dialog_title"
                    android:textSize="18dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/btn_circle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:button="@drawable/radio_selector"
                        android:checked="true"
                        android:minHeight="25dp"
                        android:text="@string/circle_fence"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/btn_polygon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.30"
                        android:button="@drawable/radio_selector"
                        android:minHeight="25dp"
                        android:text="@string/polygon_fence"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/btn_polyline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:button="@drawable/radio_selector"
                        android:minHeight="25dp"
                        android:text="@string/polyline_fence"
                        android:textColor="@color/list_item_desc"
                        android:textSize="15dp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_fence_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.3"
                    android:text="@string/fence_name"
                    android:textColor="@color/dialog_title"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/edtTxt_fence_name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:background="@drawable/all_border"
                    android:hint="@string/fence_name_hint"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/gray"
                    android:textSize="20dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_vertexes_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.3"
                    android:text="@string/vertexes_number"
                    android:textColor="@color/dialog_title"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/text_vertexes_number"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:background="@drawable/all_border"
                    android:hint="@string/vertexes_number_hint"
                    android:inputType="number"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="20dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_border"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/cancel_bg"
                    android:text="@string/all_cancel"
                    android:textColor="@color/dialog_title"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btn_sure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/sure_bg"
                    android:text="@string/all_sure"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>

